# aegis

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README.zh.md  SYSTEM_OVERVIEW_README.md  pyproject.toml
deploy/: .env.example  docker-compose.yml
docs/: hypothesis_spec.md  lean_execution_validation.md
incubating/: btc_price_action_reeval.meta.json  combo_indicator_search.meta.json  combo_scorecard.meta.json  crypto_tsmom.meta.json  domestic_futures_adx_prefilter.py  domestic_options_retest.py  edgar_pit_fundamentals.meta.json  equal_weight_allocation.meta.json  equal_weight_allocation.py  equal_weight_reposition.meta.json  equal_weight_reposition.py  factor_computability_map.json  funding_arb_research.meta.json  market_breadth_top_bottom.py  mo_im_vol_gap_diagnostic.py  polymarket_onchain_survivorship.meta.json  polymarket_structural_scan.meta.json  polymarket_survivor_power.meta.json  polymarket_tailaware_backtest.meta.json  price_action_definitive.meta.json  pure_risk_allocation.meta.json  pure_risk_allocation.py  risk_disciplined_beta.meta.json  risk_gate_fix.meta.json  rsi_autotune_goal.yaml  rsi_autotune_strategy.yaml  rsi_autotune_walkforward.meta.json  rsi_autotune_walkforward.py  sp500_asof_survivor_light.meta.json  tradingagents_edge_report.meta.json  trend_vol_risk_config.meta.json  trend_vol_risk_config.py  value_quality_factor_probe.meta.json  vibecoding_factor_factory.py
scripts/: btc_price_action_reeval.py  btc_vrp_condor_timed_evidence.py  btc_vrp_hardcap_voltarget_evidence.py  btc_vrp_short_vol_dvol_era_evidence.py  combo_scorecard.py  (+33 more)
(+83 files in other folders)
