[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
  "pydantic>=2.7,<3",
  "httpx>=0.27,<1",
  "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "httpx2>=2.3,<3",
  "ccxt>=4.4,<5",
  "backtesting>=0.3,<1",
  "pandas>=2.2,<3",
  "lxml>=5,<7",
  "yfinance>=0.2,<1",
]

[tool.setuptools.packages.find]
where = ["packages"]

[tool.pytest.ini_options]
pythonpath = ["packages"]
testpaths = ["services", "packages"]

[tool.ruff]
line-length = 100
src = ["packages", "services"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["packages", "services"]
exclude = ["services/.*/tests"]
